crates/callsoro-compile/src/snapshots/callsoro_compile__compile__tests__roundtrip_minimal.snap
---
source: crates/callsoro-compile/src/compile.rs
expression: json
---
{
  "version": 1,
  "network": "testnet",
  "network_passphrase": "Test SDF Network ; September 2015",
  "calls": [
    {
      "contract": "CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4",
      "method": "balance",
      "args": [
        {
          "type": "address",
          "value": "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF"
        }
      ]
    }
  ],
  "signing": {
    "source": "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF",
    "fee_stroops": 100000,
    "timeout_seconds": 30
  }
}
